--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main id="messages"></main>
             <div class="input-group">
                 <textarea id="message-input" placeholder="Type a message..." rows="1"></textarea>
-                <button id="send-button">Send</button>
+                <button id="send-button"><i class="fas fa-paper-plane"></i></button>
             </div>
         </div>
     </div>
