--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div class="app-container">
         <div class="sidebar">
             <h2>Users</h2>
-            <button id="dark-mode-toggle" class="dark-mode-toggle"><i class="fas fa-sun"></i></button>
+            <div class="header-buttons">
+                <button id="dark-mode-toggle" class="dark-mode-toggle"><i class="fas fa-sun"></i></button>
+                <button id="settings-button" class="settings-button"><i class="fas fa-cog"></i></button>
+            </div>
             <ul id="user-list"></ul>
         </div>
         <div class="chat-container">
