--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div id="loading-spinner" class="loading-spinner"></div>
     <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTFyN/jKEOJ/rYuCpFGwKj/waCk2rdEvb0iZEsjpDGXh7zPKQ+6qQ" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
     <script src="client.js"></script>
     <div class="modal micromodal-slide" id="settings-modal" aria-hidden="true">
         <div class="modal__overlay" tabindex="-1" data-micromodal-close>
