--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>Users</h2>
             <div class="header-buttons">
                 <button id="dark-mode-toggle" class="dark-mode-toggle"><i class="fas fa-sun"></i></button>
-                <button id="settings-button" class="settings-button"><i class="fas fa-cog"></i></button>
+                <button id="user-profile-button" class="settings-button"><i class="fas fa-user"></i></button>
                 <div id="settings-dropdown" class="settings-dropdown">
                     <div class="dropdown-item">
                         <label for="new-display-name-input">New Display Name:</label>
